--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 /* contenteditable.html styling */
-#contentEdit {
+.contentEdit {
 	width: 100%;
 	height: 400px;
 	border-radius: 10px;
@@ -44,13 +44,15 @@ body {
 	box-shadow: 2px 2px 1px black;
 	padding: 5px 2px 5px 2px;
 	overflow: auto;
+	resize : both;
 }
 
-#contentEdit img {
+/*#contentEdit img {
+	position: relative;
+	float: left;
 	max-width: 48%;
 	max-height:48%;
-	float:left;
 	resize: both;
 	overflow: hidden;
 	white-space: pre-wrap;
-}
+}*/
