FIXED MULTIFILE ERROR AND ADJUSTED EXAMPLE
Example includes buttons that can print data about all the images that are
'uploaded' on edit-div, as well as one that copies the edit-div to another
div, maintaining interactivity on any uploaded images.

Multifile drag_and_drop uploading is fixed and functional.

Uploaded image element ids are now based on their original filenames (with
random numbers prepended). For example, a file with the name Dogs.jpg may
be uploaded and have an element id of 0_12332585584_Dogs.jpg.

Room for improvement: Firefox still drops uploading data. Dropping data is
caught by a conditional related to the upload image size. Functionality
does work during the second attempt.

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,11 @@ body {
 }
 
 /* contenteditable.html styling */
+button {
+	display: inline-block;
+	margin-left: 5px;
+}
+
 .contentEdit {
 	width: 100%;
 	height: 400px;
@@ -45,8 +50,20 @@ body {
 	padding: 5px 2px 5px 2px;
 	overflow: auto;
 	resize : both;
+	margin: 5px;
 }
 
+#result {
+	border-radius: 10px;
+	margin: 5px;
+	width: 30%;
+	height: 200px;
+	border: 1px solid black;
+	box-shadow: 2px 2px 1px black;
+	white-space: pre-wrap;
+	overflow: auto;
+	text-wrap: always;
+}
 /*#contentEdit img {
 	position: relative;
 	float: left;
