--- a/css/style.css
+++ b/css/style.css
@@ -2,39 +2,6 @@ body {
 	font-family: "arial";
 }
 
-#box1 {
-	background-color: red;
-    float: left;
-    height: 275px;
-    overflow: auto;
-    padding: 10px;
-    width: 500px;
-    white-space: nowrap;
-}
-
-#box2 {
-	border: 1px solid blue;
-	background-color: blue;
-}
-
-#box3 {
-	border: 1px solid green;
-	background-color: green;
-}
-
-#box4 {
-	border: 1px solid yellow;
-	background-color: yellow;
-}
-
-.innerbox {
-	border: 1px solid black;
-	height: 250px;
-	width:250px;
-	position: relative;
-	display: inline-block;
-}
-
 /* contenteditable.html styling */
 button {
 	display: inline-block;
@@ -64,7 +31,15 @@ button {
 	white-space: pre-wrap;
 	overflow: auto;
 	text-wrap: always;
-	display: inline-block;
+	position: absolute;
+	top: 463px;
+}
+
+#result {
+	left: 11px;
+}
+#textbox {
+	left: 434px;
 }
 
 /*#contentEdit img {
