--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,36 @@
 body {
-	font-family: "arial";
+	font-family: "garamond","arial";
 }
 
 /* contenteditable.html styling */
 button {
 	display: inline-block;
 	margin-left: 5px;
+	position: relative;
+	top:15px;
+}
+
+h1 {
+	text-align: center;
 }
 
 .contentEdit {
-	width: 100%;
+	width: 77%;
 	height: 400px;
 	border-radius: 10px;
 	border: 1px solid black;
-	box-shadow: 2px 2px 1px black;
-	padding: 5px 2px 5px 2px;
+	-moz-box-shadow:    inset 0 0 10px #000000;
+   	-webkit-box-shadow: inset 0 0 10px #000000;
+   	box-shadow:         inset 0 0 10px #000000;
+	padding: 10px;
 	overflow: auto;
-	resize : both;
+	resize: both;
 	margin: 5px;
+	left: 104px;
 }
 
 .resultbox {
-	clear:both;
+	clear: both;
 	border-radius: 10px;
 	margin: 5px;
 	width: 30%;
@@ -30,16 +39,69 @@ button {
 	box-shadow: 2px 2px 1px black;
 	white-space: pre-wrap;
 	overflow: auto;
-	text-wrap: always;
-	position: absolute;
-	top: 463px;
+	word-wrap: always;
+	position: relative;
+	top: 20px;
+	left: 219px;
+	padding: 10px;
 }
 
-#result {
-	left: 11px;
+#helpicon {
+	position: absolute;
+	display: inline-block;
+	background-image: url("img/help_icon.png");
+	height: 25px;
+	width: 27px;
+	top: 32px;
+	right: 27%;
+	background-size: 56px 25px;
 }
+#helpicon:hover {
+	background-position: 28px 0px;
+}
+#help_display {
+	position: absolute;
+	top:0px;
+	left:0px;
+	height: 700%;
+	width: 100%;
+	opacity: 0.3;
+	background-color: black;
+
+}
+
+#help_text {
+	color:black ;
+	z-index: 100;
+	background-color: white;
+	width: 45%;
+	padding: 10px;
+	border-radius: 5px;
+	position: absolute;
+	top: 34%;
+	left: 30%;
+	word-wrap: break-word;
+	cursor:pointer;
+}
+#exit_display {
+	border-radius: 5px;
+	z-index:1000;
+	position: absolute;
+	top: 0px;
+	right:0px;
+}
+
 #textbox {
-	left: 434px;
+	top: -208px;
+	left: 656px;
+}
+
+#print_data {
+	left: 341px;
+}
+
+#print_text {
+	left: 531px;
 }
 
 /*#contentEdit img {
