--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,10 @@ h1 {
 	box-shadow: 2px 2px 1px black;
 	white-space: pre-wrap;
 	overflow: auto;
-	word-wrap: always;
+	word-wrap: break-word;
 	position: relative;
 	top: 20px;
-	left: 219px;
+	left: 104px;
 	padding: 10px;
 	background-color: white;
 }
@@ -98,14 +98,14 @@ h1 {
 
 #textbox {
 	top: -208px;
-	left: 656px;
+	left: 802px;
 }
 
 #print_data {
-	left: 341px;
+	left: 244px;
 }
 
 #print_text {
-	left: 531px;
+	left: 716px;
 }
 
