MINOR STYLING FIX
-Buttons realigned

--- a/css/style.css
+++ b/css/style.css
@@ -113,10 +113,10 @@ ul li ul li:first-child, ul li ul li:last-child {
 }
 
 #print_data {
-	left: 229px;
+	left: 8%;
 }
 
 #print_text {
-	left: 457px;
+	left: 28%;
 }
 
